--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -24,3 +24,23 @@
   background-color: $light-pink;
   padding: 20px;
 }
+
+.alert_image {
+  width: 100%;
+  aspect-ratio: 1;
+  object-fit: cover;
+  animation: zoomInOut 4s ease-in-out infinite; /* Définir l'animation */
+}
+
+/* Définir l'animation zoom */
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1); /* À l'état normal */
+  }
+  50% {
+    transform: scale(1.5); /* Zoom in */
+  }
+  100% {
+    transform: scale(1); /* Zoom out */
+  }
+}
