--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,5 +1,7 @@
 <div>
-  <%= render "shared/back"%>
+  <%= link_to animals_path, class:"text-decoration-none text-primary", style:"font-size: 16px" do%>
+  <i class="fa-solid fa-chevron-left text-primary ms-4 me-3 mt-3"></i>Retour
+  <% end %>
 </div>
 <div class="container">
   <div class="row d-flex justify-content-center">
