--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -153,8 +153,10 @@
 
         </div>
       </div>
-      <div class="text-end mt-4">
-        <a href="<%=pet_alerts_path%>" class="text-dark" style="font-size: 20px; text-decoration: underline">Voir toutes les annonces <i class="fa-solid fa-arrow-right"></i></a>
+      <div class="text-end">
+        <h5>
+          <a href="<%=pet_alerts_path%>" class="text-dark" style="text-decoration: underline">Voir toutes les annonces <i class="fa-solid fa-arrow-right"></i></a>
+        </h5>
       </div>
     </div>
   </div>
