--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,51 +1,45 @@
 <div>
   <%= render "shared/back"%>
 </div>
-
 <div class="container">
   <div id="carouselExampleSlidesOnly" class="carousel slide rounded-5" data-bs-ride="carousel" style="width: 100%; max-height: 71vh; overflow: hidden;">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734621854/Design_sans_titre_taz0br.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/roberto-nickson-q9nZUFC1nTw-unsplash.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734621854/Design_sans_titre_1_sryfuj.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(1).jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622498/Design_sans_titre_5_hzjvgu.jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(5).jpg" class="d-block w-100" alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622497/Design_sans_titre_6_kojqpk.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(6).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622497/Design_sans_titre_4_nyrr0m.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(4).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622493/Design_sans_titre_3_y01tpz.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(3).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734622491/Design_sans_titre_2_yat5du.jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/Design%20sans%20titre%20(2).jpg" class="d-block w-100 " alt="Photo d'animaux heureux" style="transition: 3s ease">
       </div>
     </div>
   </div>
-
   <h1 class="text-center my-4">🐾 Ils cherchent une nouvelle famille 🏠</h1>
-<div class="row justify-content-center">
-  <div class="col-sm-8 my-3">
-    <%= form_with url: animals_path, method: :get, class: "d-flex" do %>
-
-
-      <%= text_field_tag :query,
+  <div class="row justify-content-center">
+    <div class="col-sm-8 my-3">
+      <%= form_with url: animals_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
             params[:query],
             class: "form-control",
             placeholder: "Rechercher par ville"
         %>
-      <%= submit_tag "Recherche", name: "", class: "btn btn-primary" %>
-    <% end %>
+        <%= submit_tag "Recherche", name: "", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
-</div>
-
-
   <div class="d-flex flex-wrap justify-content-center" data-controller="animal-index">
     <% @animals.each do |animal| %>
       <a  href="<%=animal_path(animal)%>"
