--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
   <h3 class="mt-5">Nos services</h3>
   <div class="d-flex justify-content-start custom-scroll mt-2", style="white-space: nowrap; overflow-x: auto;">
     <a href="<%=professionals_path%>"  style="text-decoration:none; color: white;">
-      <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://res.cloudinary.com/dsbteudoz/image/upload/v1734016805/vitaly-gariev-HURf5iUtSQg-unsplash_haxcr5.jpg);">
+      <div class="card-category p-5" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/vitaly-gariev-HURf5iUtSQg-unsplash.jpg);">
         <h4>Tous nos services</h4>
       </div>
     </a>
@@ -55,7 +55,7 @@
   <h3 class="mt-5 text-center">Vous aussi, vous souhaitez proposer un service ?</h3>
   <div class="row d-flex justify-content-center align-items-center mt-4">
     <div class="col-12 col-lg-5 text-center pe-5">
-      <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734608983/guy-walking-with-dog-in-the-park_ltkcew.png" alt="Proposer un service">
+      <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/guy-walking-with-dog-in-the-park.png" alt="Proposer un service">
     </div>
     <div class="col-12 col-lg-5" style="word-wrap: break-word; word-break: break-word; white-space: normal; text-align: justify;">
       <h5>Vous adorez les animaux et vous avez des compétences à partager ?</h5>
@@ -95,7 +95,6 @@
       </a>
     <% end %>
   </div>
-
   <%# pet alert %>
   <div class="row d-flex justify-content-center align-items-center m-2">
     <div class="card_pro p-4 col-lg-10 col-md-10 col-sm-10">
@@ -105,7 +104,7 @@
       <div class="row d-flex align-items-center justify-content-around" >
         <%# alert image %>
         <div class="d-flex flex-column justify-content-center align-items-center col-lg-3 col-md-3 col-sm-7 p-3">
-          <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1736871775/caution-sign_ob9hnk.png"
+          <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/caution-sign.png"
             alt="alert"
             class="alert_image m-4">
           <a href="<%=new_pet_alert_path%>" class="btn btn-primary rounded rounded-4 my-4"> Publier une annonce </a>
@@ -113,44 +112,45 @@
         <%# carousel %>
         <div class="col-lg-7 col-md-7 col-sm-10">
           <% if @pet_alerts.empty?%>
-          <p>Pas d'annonces en cours 🤗</p>
-          <% else %>
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <% @pet_alerts.each_with_index do |a, index| %>
-                <a href="<%=pet_alerts_path%>" style="text-decoration: none; color: white;">
-                  <div class="carousel-item <%= 'active' if index == 0 %>" data-bs-interval="5000">
-                    <div class="carousel-image-container">
-                      <%= image_tag cl_image_path(a.photo.key), class: "d-block w-100", style: "border-radius: 12px; height: 300px; object-fit: cover;" %>
-                      <div class="carousel-caption d-none d-md-block card text-light" style="border-radius: 20px;background: rgba(105, 103, 103, 0.61);">
-                        <div class="d-flex flex-row justify-content-center align-items-center">
-                          <h5><strong><%=a.title%></strong></h5>
-                          <% if a.status == false %>
-                            <i class="fa-solid fa-circle-exclamation text-warning mx-4 " style="font-size: 32px"></i>
-                          <% else %>
-                            <i class="fa-solid fa-circle-check text-success mx-4 " style="font-size: 32px"></i>
-                          <% end %>
-                        </div>
-                        <p class="m-2"><%=a.description%></p>
-                        <a href="<%=pet_alert_path(a)%>" class="btn btn-info rounded rounded-4">En savoir plus</a>
-                      </div>
-                      <div class="carousel-caption-overlay"></div>
-                    </div>
-                  </div>
-                </a>
-              <% end %>
+            <div class="text-center card_pro py-5">
+              <p>Pas d'annonces en cours 🤗</p>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+          <% else %>
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <% @pet_alerts.each_with_index do |a, index| %>
+                  <a href="<%=pet_alerts_path%>" style="text-decoration: none; color: white;">
+                    <div class="carousel-item <%= 'active' if index == 0 %>" data-bs-interval="5000">
+                      <div class="carousel-image-container">
+                        <%= image_tag(url_for(a.photo), alt: "photo of pet alert", class: "d-block w-100", style: "border-radius: 12px; height: 300px; object-fit: cover;") %>
+                        <div class="carousel-caption d-none d-md-block card text-light" style="border-radius: 20px;background: rgba(105, 103, 103, 0.61);">
+                          <div class="d-flex flex-row justify-content-center align-items-center">
+                            <h5><strong><%=a.title%></strong></h5>
+                            <% if a.status == false %>
+                              <i class="fa-solid fa-circle-exclamation text-warning mx-4 " style="font-size: 32px"></i>
+                            <% else %>
+                              <i class="fa-solid fa-circle-check text-success mx-4 " style="font-size: 32px"></i>
+                            <% end %>
+                          </div>
+                          <p class="m-2"><%=a.description%></p>
+                          <a href="<%=pet_alert_path(a)%>" class="btn btn-info rounded rounded-4">En savoir plus</a>
+                        </div>
+                        <div class="carousel-caption-overlay"></div>
+                      </div>
+                    </div>
+                  </a>
+                <% end %>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
           <% end %>
-
         </div>
       </div>
       <div class="text-end">
@@ -160,7 +160,6 @@
       </div>
     </div>
   </div>
-
   <%# appointments to come %>
   <h3 class="mt-5 mb-4">Vos futurs rendez-vous</h3>
   <% if user_signed_in? %>
@@ -200,7 +199,7 @@
       <div class="d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center", style="width: 50%;">
           <p class="text-center">Vous n'avez pas de rendez-vous à venir.</p>
-          <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
+          <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/owner-playing-with-pet-dog.png">
         </div>
       </div>
     <% end %>
@@ -209,7 +208,7 @@
       <div class="d-flex flex-column justify-content-center align-items-center", style="width: 50%;">
         <p class="text-center">Veuillez vous connecter pour voir vos rendez-vous.</p>
         <%= link_to "Se connecter", new_user_session_path, class: "text-center btn btn-primary text-white"%>
-        <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734099737/business-solution-removebg-preview_c0hr67.png">
+        <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/business-solution-removebg-preview.png">
       </div>
     </div>
   <% end %>
