--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -15,7 +15,7 @@
   <div class="row d-flex justify-content-center">
     <div class="col-lg-5 col-md-5 col-sm-10 card_pro" style="height: 400px;">
       <% if @pet.photo.present? %>
-        <%= image_tag @pet.photo, class: "card-img-top w-100 h-100 object-fit-cover rounded"%>
+        <%= image_tag @pet.photo_url, class: "card-img-top w-100 h-100 object-fit-cover rounded"%>
       <% else %>
         <img  src="https://res.cloudinary.com/dsbteudoz/image/upload/v1736071797/production/l36dmns98zvw0qbpvjtduy102ebz.jpg"
               alt="photo_pet_default"
