--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -15,7 +15,7 @@
   <div class="grid">
     <div id="info-pro">
       <div style="margin: 8px;" class="text-center">
-        <%= cl_image_tag @professional.photo.key, crop: :fill, class:"rounded-4 mb-2", style:"width: 60%;"%>
+        <%= image_tag(@professional.photo_url, crop: :fill, class:"rounded-4 mb-2", style:"width: 60%;")%>
       </div>
       <div class="d-flex flex-column justify-content-center" style="width: 100%;">
         <div class="card_pro">
