--- a/app/views/pet_alerts/index.html.erb
+++ b/app/views/pet_alerts/index.html.erb
@@ -30,7 +30,11 @@
             </div>
             <!-- Image qui prend le reste de la place -->
             <div class="flex-grow-1" style="overflow: hidden;">
-              <%= image_tag(animal.photo_url, style: "width: 100%; height: 100%; object-fit: cover;") %>
+              <% if animal.photo.present?%>
+                <%= image_tag(animal.photo_url, style: "width: 100%; height: 100%; object-fit: cover;") %>
+              <% else %>
+                <img src="https://hgzbeyxwlmegxvrhxpws.supabase.co/storage/v1/object/public/general_images/question.png" alt="alert photo default" style= "width: 100%; height: 100%; object-fit: cover;">
+              <% end %>
             </div>
           </div>
         </div>
