--- a/app/views/pet_alerts/index.html.erb
+++ b/app/views/pet_alerts/index.html.erb
@@ -23,7 +23,7 @@
             <div class="p-3 text-center d-flex flex-row justify-content-center align-items-center" style="border-radius: 8px 8px 0 0; background-color: #f7e6d4;">
               <%=animal.title %>
               <% if animal.status == false %>
-                        <i class="fa-solid fa-circle-exclamation text-warning ms-1" style="font-size: 32px"></i>
+                        <i class="fa-solid fa-circle-exclamation ms-1" style="font-size: 32px; color: #FF0035;"></i>
                       <% else %>
                         <i class="fa-solid fa-circle-check text-success ms-1" style="font-size: 32px"></i>
                       <% end %>
