--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,8 +34,8 @@
             </div>
           </li>
         <% else %>
-          <li class="nav-item btn btn-primary rounded rounded-4">
-            <%= link_to "Se connecter", new_user_session_path, class: "nav-link text-white" %>
+          <li class="nav-item btn btn-light rounded rounded-4">
+            <%= link_to "Se connecter", new_user_session_path, class: "nav-link text-dark" %>
           </li>
         <% end %>
       </ul>
