--- a/app/views/pricings/index.html.erb
+++ b/app/views/pricings/index.html.erb
@@ -25,7 +25,7 @@
               <div class="pricing-price m-4">
                 <%= form_with url: orders_path do %>
                   <%= hidden_field_tag 'pricing_id', pricing.id %>
-                  <%= submit_tag 'Choisir', class: 'btn btn-primary' %>
+                  <%= submit_tag 'Choisir', class: 'btn_custom' %>
                 <% end %>
               </div>
             </div>
