--- a/app/views/professionals/_all_service.html.erb
+++ b/app/views/professionals/_all_service.html.erb
@@ -19,7 +19,7 @@
     <% end %>
   </div>
   <a href="<%=new_professional_path%>"
-              class="btn btn-primary rounded shadow align-items-center position-absolute bottom-0 end-0 m-4"
+              class="btn_custom shadow align-items-center position-absolute bottom-0 end-0 m-4"
                >
     Ajouter un professionnel
     <%# <i class="fa-solid fa-plus"></i> %>
