--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -102,7 +102,7 @@
               </div>
             </div>
             <!-- Bouton de soumission -->
-            <%= a.button :submit, "Confirmer le rendez-vous", class: "btn btn-primary my-4 rounded rounded-4"%>
+            <%= a.button :submit, "Confirmer le rendez-vous", class: "btn_custom my-4"%>
           </div>
         </div>
       </div>
