--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -68,7 +68,7 @@
   </div>
   <div class="text-center">
 
-      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn btn-primary my-4 rounded rounded-4' %>
+      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn_custom my-4' %>
 
   </div>
 </div>
