--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,7 +14,7 @@
       </ul>
 
     <div class="text-center">
-      <%= link_to "Créer le service #{@order.pricing.specialty}",new_professional_path, class:"btn btn-primary px-5 py-3 rounded-pill text-white" %>
+      <%= link_to "Créer le service #{@order.pricing.specialty}",new_professional_path, class:"btn_custom" %>
     </div>
     </div>
 </div>
