--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -15,7 +15,7 @@
                   <p>Specialité : <%= professional.specialty %></p>
                   <p>Adresse : <%= professional.address %></p>
                 </div>
-                  <p class="text-start mx-2 mt-2" style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%= professional.description %></p>
+                  <p class="text-start mx-2 mt-2" style="word-wrap: break-word; word-break: break-word; white-space: normal;"><%= professional.description.slice(0,200) %>...</p>
               </a>
             </div>
             <%= render "available_slots", professional: professional%>
