--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -66,9 +66,8 @@
       </div>
     </div>
   </div>
-  <div class="text-center">
-
-      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn_custom my-4' %>
+  <div class="text-center my-4">
+      <%= link_to 'Retour à la page d\'accueil', root_path, class: 'btn_custom ' %>
 
   </div>
 </div>
